<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Name of the App -->
    <TextView
        android:id="@+id/radioU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/radiou"
        android:textColor="#AC50DC"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Table -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="18dp"
        app:layout_constraintTop_toBottomOf="@+id/radioU"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints">

        <!-- 1. Zeile -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- 80er Image Button -->
            <ImageButton
                android:id="@+id/button80er"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/achtziger"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/achtziger" />

            <!-- 90er Image Button -->
            <ImageButton
                android:id="@+id/button90er"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/neunziger"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/neunziger" />

            <!-- EDM Button -->
            <ImageButton
                android:id="@+id/buttonEDM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/edm"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/edm" />
        </TableRow>

        <!-- 2. Zeile -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- House Button -->
            <ImageButton
                android:id="@+id/buttonHouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/house"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/house" />

            <!-- Festival Button -->
            <ImageButton
                android:id="@+id/buttonFestival"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/festival"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/festival" />

            <!-- Techno Button -->
            <ImageButton
                android:id="@+id/buttonTechno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/techno"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/techno" />
        </TableRow>

        <!-- 3. Zeile -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Chill Button -->
            <ImageButton
                android:id="@+id/buttonChill"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/chill"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/chill" />

            <!-- Afrohouse Button -->
            <ImageButton
                android:id="@+id/buttonAfrohouse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/afrohouse"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/afrohouse" />

            <!-- Hardstyle Button -->
            <ImageButton
                android:id="@+id/buttonHardstyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hardstyle"
                android:onClick="clickOnPlaylist"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/hardstyle" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>